got to the last section of customer_segments project

--- a/Notes/Unsupervised Learning/Clustering.ipynb
+++ b/Notes/Unsupervised Learning/Clustering.ipynb
@@ -261,6 +261,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "An example of soft clustering is the [guassian mixed model](http://scikit-learn.org/stable/modules/mixture.html).\n",
+    "\n",
+    "A Gaussian mixture model is a probabilistic model that assumes all the data points are generated from a mixture of a finite number of Gaussian distributions with unknown parameters. One can think of mixture models as generalizing k-means clustering to incorporate information about the covariance structure of the data as well as the centers of the latent Gaussians."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Maximum Likelihood Gaussian"
    ]
   },
@@ -285,7 +294,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -487,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   },
   "toc": {
    "nav_menu": {},
@@ -495,7 +503,13 @@
    "sideBar": true,
    "skip_h1_title": false,
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "704px",
+    "left": "0px",
+    "right": "1272.8px",
+    "top": "107px",
+    "width": "212px"
+   },
    "toc_section_display": "block",
    "toc_window_display": true
   },
