making corrections pointed out in review for customer_segments

--- a/Projects/projects for submission/customer_segments (Unsupervised Learning)/customer_segments.ipynb
+++ b/Projects/projects for submission/customer_segments (Unsupervised Learning)/customer_segments.ipynb
@@ -1939,7 +1939,8 @@
     "There are a hand full of data points which are outliers for more then one feature. See output above for the pairing breakdown.\n",
     "\n",
     "Yes these data points should be removed from the data set.\n",
-    "\n"
+    "\n",
+    "K-Means is sensitive to outliers. In simplest terms, suppose we have to perfectly distinguishable clusters (guassian clouds) and then we have an outlier several factors of distance away. Now suppose we specify that there are two clusters present in the data set, K-Means will try find 2 centroids that satisfy the large value that would arrise from the loss function when it handles the outlier, this means that the centroid will gravitate towards the outlier and as a result throw off the \"true clustering\" centroids."
    ]
   },
   {
