added final feedback for customer_seg project

--- a/Projects/projects for submission/customer_segments (Unsupervised Learning)/customer_segments.ipynb
+++ b/Projects/projects for submission/customer_segments (Unsupervised Learning)/customer_segments.ipynb
@@ -366,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# reshape sample data for box plot\n",
@@ -2259,6 +2261,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Interpretation of the Principal Components](https://onlinecourses.science.psu.edu/stat505/node/54)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Observation\n",
     "Run the code below to see how the log-transformed sample data has changed after having a PCA transformation applied to it in six dimensions. Observe the numerical value for the first four dimensions of the sample points. Consider if this is consistent with your initial interpretation of the sample points."
    ]
@@ -3096,7 +3105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***???Question for marker??? cluster size 3 is marginally better, but if you look at the how the groups are defined it doesn't make alot of sense - how can the silhoutte score be interpreted when evaluating soft clustering?*** "
+    "***FEEDBACK NOTE: cluster size 3 for GMM is marginally better, but if you look at the how the groups are defined it doesn't make alot of sense - how can the silhoutte score be interpreted when evaluating soft clustering?*** \n",
+    "\n",
+    "Two clusters give the best score. Intuitively, given this small data size, we usually do not want to have too many clusters. So dividing data into two clusters is quite reasonable here.\n",
+    "\n",
+    "Note: The Silhouette score is calculated based on Euclidean distance, which is also the proximity measure used in k-means clustering. For GMM whose assignment is probabilistic, Silhouette score may not be the best metric, and alternative metrics could be Bayesian Information Criterion or Akaike information criterion.\n",
+    "\n",
+    "Ref: http://scikit-learn.org/stable/auto_examples/mixture/plot_gmm_selection.html#example-mixture-plot-gmm-selection-py"
    ]
   },
   {
@@ -3590,9 +3605,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The wholesale distributor could train a supervised learning algorithm (like SVM or a Random Forest) on the original data while using the engineered features as the labels (target variable).\n",
+    "The wholesale distributor could train a supervised learning algorithm (like SVM or a Random Forest) on the original data while using the engineered features as the labels (target variable).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***FEEDBACK NOTE: Why not just run a prediction with the new data to the cluster algorithm that was fitted to the old data?***\n",
     "\n",
-    "***???Question for marker???? Why not just run a prediction with the new data to the cluster algorithm that was fitted to the old data? I fail to understand what benifit we could get from running a supervied algo in this situation.***"
+    "The major benefit is in supervised learning we only need to train the model once, and use the trained model to predict the customer segment for new data. The prediction for a single data is usually much faster than re-running the clustering algorithm for all the data points.\n",
+    "\n",
+    "An alternative to using the cluster label as the target variable is to treat the clustering result as an additional feature, and apply techniques such as stacking, as often done in Kaggle competitions."
    ]
   },
   {
@@ -3686,7 +3710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   },
   "toc": {
    "nav_menu": {},
