made correction to cnn project

--- a/Projects/projects for submission/dog-project (Convolutional Neural Networks)/dog_app.ipynb
+++ b/Projects/projects for submission/dog-project (Convolutional Neural Networks)/dog_app.ipynb
@@ -557,7 +557,22 @@
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
     "__Answer:__\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea of the application is for users to find out what kind of dog breed they look like, so it would reason that they would submit their whole face. \n",
     "\n",
+    "Even so, one must assume the user will make mistake. To account for users uploading faces that aren't fully visible CNNs can be used which will use be able to determine if a face / person is present by looking for partial, specific, features within the image - this allows for detection of faces which are partially obscured.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
   },
@@ -3262,9 +3277,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "dog-project",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dog-project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3276,16 +3291,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   },
   "toc": {
-   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
     "height": "calc(100% - 180px)",
@@ -3294,7 +3306,36 @@
     "width": "321px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
