Twitter date ranger script and formating of folder stuc

--- a/Projects/projects for submission/capstone/Google Big Quesy Snippets.ipynb
+++ b/Projects/projects for submission/capstone/Google Big Quesy Snippets.ipynb
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python twitter",
+   "display_name": "Python (other-env)",
    "language": "python",
    "name": "other-env"
   },
