working s3 copy in the tweet ingestion script

--- a/Projects/projects for submission/capstone/AWS Experimentation .ipynb
+++ b/Projects/projects for submission/capstone/AWS Experimentation .ipynb
@@ -47,7 +47,7 @@
     "# Fill in info on data to upload\n",
     "# destination bucket name\n",
     "\n",
-    "def move_to_s3(path=etherium/):\n",
+    "def move_to_s3(path=\"etherium/\"):\n",
     "    bucket_name = 'jeroens-bucket'\n",
     "    \n",
     "    # source directory\n",
