--- a/Projects/projects for submission/capstone/AWS Experimentation .ipynb
+++ b/Projects/projects for submission/capstone/AWS Experimentation .ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# s3"
+    "# s3 - py2"
    ]
   },
   {
@@ -108,20 +108,41 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Buckets - py3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_bucket = boto.connect_s3()\n",
-    "#my_bucket = s3.Bucket('jeroens-bucket')"
+    "import boto3 as boto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'boto3' has no attribute 'connect_s3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6ace43040ba7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmy_bucket\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mboto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect_s3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#my_bucket = s3.Bucket('jeroens-bucket')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'boto3' has no attribute 'connect_s3'"
+     ]
+    }
+   ],
+   "source": [
+    "#my_bucket = boto.connect_s3()\n",
+    "##my_bucket = s3.Bucket('jeroens-bucket')"
    ]
   },
   {
@@ -336,21 +357,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Get Tweets py2",
+   "display_name": "aws",
    "language": "python",
-   "name": "py2-get-tweets"
+   "name": "aws"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
