--- a/Projects/projects for submission/dog-project (Convolutional Neural Networks)/dog_app.ipynb
+++ b/Projects/projects for submission/dog-project (Convolutional Neural Networks)/dog_app.ipynb
@@ -3306,10 +3306,10 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "321px"
+    "width": "225px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
