created some analytics graphs for ticker data and started analysis for sentiments

--- a/Projects/projects for submission/capstone/Main Project (ML + Feature Creation).ipynb
+++ b/Projects/projects for submission/capstone/Main Project (ML + Feature Creation).ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# Some ideas to explore\n"
@@ -4021,27 +4021,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-14T20:08:59.247183Z",
-     "start_time": "2018-07-14T20:08:59.243100Z"
+     "end_time": "2018-07-14T20:12:22.309489Z",
+     "start_time": "2018-07-14T20:12:22.304209Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0624381022928213"
+       "1.0422773815639128"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(r_3[r_c_gt][1:7054])"
+    "(np.average(r_3[r_c_gt][1:7054]) + np.average(r_3[r_c_gt][7055:]))/2"
    ]
   },
   {
