almost done with analysis graphs

--- a/Projects/projects for submission/capstone/Main Project (ML + Feature Creation).ipynb
+++ b/Projects/projects for submission/capstone/Main Project (ML + Feature Creation).ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# Some ideas to explore\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,17 +65,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 13108204899530850248\n",
-      ", name: \"/device:GPU:0\"\n",
-      "device_type: \"GPU\"\n",
-      "memory_limit: 3831431168\n",
-      "locality {\n",
-      "  bus_id: 1\n",
-      "  links {\n",
-      "  }\n",
-      "}\n",
-      "incarnation: 10796929710522430238\n",
-      "physical_device_desc: \"device: 0, name: GeForce GTX 960M, pci bus id: 0000:02:00.0, compute capability: 5.0\"\n",
+      "incarnation: 912723285822500423\n",
       "]\n"
      ]
     }
@@ -5382,9 +5365,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keras-gpu",
+   "display_name": "udacity",
    "language": "python",
-   "name": "keras-gpu"
+   "name": "udacity"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5396,7 +5379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
