--- a/Projects/projects for submission/capstone/Data Exploration.ipynb
+++ b/Projects/projects for submission/capstone/Data Exploration.ipynb
@@ -471,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keras-gpu",
+   "display_name": "udacity",
    "language": "python",
-   "name": "keras-gpu"
+   "name": "udacity"
   },
   "language_info": {
    "codemirror_mode": {
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
