finished most of the data analysis stuff

--- a/Projects/projects for submission/capstone/get-data/get_data/reddit .ipynb
+++ b/Projects/projects for submission/capstone/get-data/get_data/reddit .ipynb
@@ -17,13 +17,14 @@
     "                        .config('spark.executor.memory', '5g')\\\n",
     "                        .config('spark.driver.memory', '5g')\\\n",
     "                        .appName(\"Tweet wrangeling\")\\\n",
-    "                        .config('spark.local.dir','~/.spark_tmp/')\\\n",
-    "                        .getOrCreate()"
+    "                        .getOrCreate()\n",
+    "\n",
+    "# .config('spark.local.dir','~/.spark_tmp/')\\"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-24T12:23:07.310512Z",
@@ -41,13 +42,13 @@
    },
    "outputs": [],
    "source": [
-    "reddit_csv_path = \"../data/reddit-crypto/json/\"\n",
+    "reddit_csv_path = \"../../data/reddit-crypto/json/\"\n",
     "reddit_comments_raw = spark.read.json(reddit_csv_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-24T12:23:07.315386Z",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-24T12:23:09.177364Z",
@@ -291,7 +292,7 @@
        "4  t1_cgty4n6   1433381754     9         False   Bitcoin     t5_2s3qj   9  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-24T12:24:44.469546Z",
@@ -322,12 +323,12 @@
       " |-- author: string (nullable = true)\n",
       " |-- author_flair_text: string (nullable = true)\n",
       " |-- downs: integer (nullable = true)\n",
-      " |-- created_utc: date (nullable = true)\n",
+      " |-- created_utc: timestamp (nullable = true)\n",
       " |-- subreddit_id: string (nullable = true)\n",
       " |-- link_id: string (nullable = true)\n",
       " |-- parent_id: string (nullable = true)\n",
       " |-- score: integer (nullable = true)\n",
-      " |-- retrieved_on: date (nullable = true)\n",
+      " |-- retrieved_on: timestamp (nullable = true)\n",
       " |-- controversiality: integer (nullable = true)\n",
       " |-- gilded: integer (nullable = true)\n",
       " |-- id: string (nullable = true)\n",
@@ -340,7 +341,7 @@
     }
    ],
    "source": [
-    "from pyspark.sql.functions import col, from_unixtime\n",
+    "from pyspark.sql.functions import col, from_unixtime, to_timestamp\n",
     "from pyspark.sql.types import DateType, BooleanType, IntegerType\n",
     "\n",
     "bool_type = BooleanType()\n",
@@ -355,12 +356,12 @@
     "\"author\",\n",
     "\"author_flair_text\", \n",
     "col(\"downs\").cast(int_type),\n",
-    "from_unixtime(\"created_utc\").cast(date_type).alias(\"created_utc\"),\n",
+    "to_timestamp(from_unixtime(\"created_utc\")).alias(\"created_utc\"),\n",
     "\"subreddit_id\",\n",
     "\"link_id\",\n",
     "\"parent_id\",\n",
     "col(\"score\").cast(int_type),\n",
-    "from_unixtime(\"retrieved_on\").cast(date_type).alias(\"retrieved_on\"),    \n",
+    "to_timestamp(from_unixtime(\"retrieved_on\")).alias(\"retrieved_on\"),    \n",
     "col(\"controversiality\").cast(int_type),\n",
     "col(\"gilded\").cast(int_type),\n",
     "\"id\",\n",
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-24T12:34:21.714313Z",
@@ -436,7 +437,7 @@
        "      <td>Old-and-grumpy</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>2014-02-08 06:24:22</td>\n",
+       "      <td>2014-02-08 05:24:22</td>\n",
        "      <td>t5_2s3qj</td>\n",
        "      <td>t3_1xacqf</td>\n",
        "      <td>t3_1xacqf</td>\n",
@@ -482,7 +483,7 @@
        "      <td>slimmtl</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>2014-03-25 15:05:58</td>\n",
+       "      <td>2014-03-25 14:05:58</td>\n",
        "      <td>t5_2s3qj</td>\n",
        "      <td>t3_21b4pm</td>\n",
        "      <td>t3_21b4pm</td>\n",
@@ -505,7 +506,7 @@
        "      <td>gonzobon</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>2014-03-06 02:26:35</td>\n",
+       "      <td>2014-03-06 01:26:35</td>\n",
        "      <td>t5_2s3qj</td>\n",
        "      <td>t3_1zo631</td>\n",
        "      <td>t1_cfvf4mv</td>\n",
@@ -562,10 +563,10 @@
        "4         False      True  t1_cgtzbmv          Rassah              None   \n",
        "\n",
        "   downs         created_utc subreddit_id    link_id   parent_id  score  \\\n",
-       "0      0 2014-02-08 06:24:22     t5_2s3qj  t3_1xacqf   t3_1xacqf     -2   \n",
+       "0      0 2014-02-08 05:24:22     t5_2s3qj  t3_1xacqf   t3_1xacqf     -2   \n",
        "1      0 2014-06-24 16:42:07     t5_2s3qj  t3_28xz4v  t1_cifpkhw      9   \n",
-       "2      0 2014-03-25 15:05:58     t5_2s3qj  t3_21b4pm   t3_21b4pm     12   \n",
-       "3      0 2014-03-06 02:26:35     t5_2s3qj  t3_1zo631  t1_cfvf4mv     -5   \n",
+       "2      0 2014-03-25 14:05:58     t5_2s3qj  t3_21b4pm   t3_21b4pm     12   \n",
+       "3      0 2014-03-06 01:26:35     t5_2s3qj  t3_1zo631  t1_cfvf4mv     -5   \n",
        "4      0 2014-04-16 18:01:19     t5_2s3qj  t3_236k5d  t1_cgty4n6      9   \n",
        "\n",
        "         retrieved_on  controversiality  gilded       id subreddit  ups  \\\n",
@@ -583,7 +584,7 @@
        "4          None                   None  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,9 +1040,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyspark2.3.0",
+   "display_name": "udacity",
    "language": "python",
-   "name": "pyspark2.3.0"
+   "name": "udacity"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1053,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
