realised what cnn models were doing with the time data, also formating of project so that it can submitted

--- a/Projects/projects for submission/capstone/analysis/Ticker Data Analysis.ipynb
+++ b/Projects/projects for submission/capstone/analysis/Ticker Data Analysis.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Context\" data-toc-modified-id=\"Context-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Context</a></span></li><li><span><a href=\"#Import-Libraris\" data-toc-modified-id=\"Import-Libraris-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Import Libraris</a></span></li><li><span><a href=\"#Load-the-data\" data-toc-modified-id=\"Load-the-data-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Load the data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Prep-and-intervals\" data-toc-modified-id=\"Prep-and-intervals-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Prep and intervals</a></span></li></ul></li><li><span><a href=\"#Price-over-time\" data-toc-modified-id=\"Price-over-time-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Price over time</a></span></li><li><span><a href=\"#Change-in-closing-price\" data-toc-modified-id=\"Change-in-closing-price-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Change in closing price</a></span></li><li><span><a href=\"#Binary-Movement\" data-toc-modified-id=\"Binary-Movement-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Binary Movement</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was used to look at the behavior of the ticker price movment for etherium and bitcoin."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook needs the following libraries:\n",
+    "* `pandas` \n",
+    "* `seaborn`\n",
+    "* `matplotlib`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Libraris"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
@@ -761,13 +802,6 @@
     "sns.set_style(\"white\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -796,7 +830,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
