--- a/Projects/projects for submission/capstone/analysis/Social Media Data Integrity Analysis.ipynb
+++ b/Projects/projects for submission/capstone/analysis/Social Media Data Integrity Analysis.ipynb
@@ -2,6 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Context\" data-toc-modified-id=\"Context-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Context</a></span></li><li><span><a href=\"#Start-Spark\" data-toc-modified-id=\"Start-Spark-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Start Spark</a></span></li><li><span><a href=\"#Eth-Tweets\" data-toc-modified-id=\"Eth-Tweets-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Eth Tweets</a></span><ul class=\"toc-item\"><li><span><a href=\"#group-by-month\" data-toc-modified-id=\"group-by-month-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>group by month</a></span></li></ul></li><li><span><a href=\"#BTC-Tweets\" data-toc-modified-id=\"BTC-Tweets-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>BTC Tweets</a></span><ul class=\"toc-item\"><li><span><a href=\"#Group-By-Month\" data-toc-modified-id=\"Group-By-Month-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Group By Month</a></span></li></ul></li><li><span><a href=\"#Reddit\" data-toc-modified-id=\"Reddit-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Reddit</a></span><ul class=\"toc-item\"><li><span><a href=\"#Eth---Reddit\" data-toc-modified-id=\"Eth---Reddit-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Eth - Reddit</a></span></li><li><span><a href=\"#BTC---Reddit\" data-toc-modified-id=\"BTC---Reddit-5.2\"><span class=\"toc-item-num\">5.2&nbsp;&nbsp;</span>BTC - Reddit</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook looks the the integrity of the data that was ingested. It was also used to produce plots for the ingested volume sizes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook will need the following libraries:\n",
+    "* `pyspark 2.3.1`\n",
+    "* `seaborn`\n",
+    "* `pandas`\n",
+    "\n",
+    "Please note that inorder for pyspark to work you need java8 to be set as the default java enviroment. It is also strongly recommended to install everything through conda. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Start Spark"
@@ -1335,45 +1371,6 @@
    ],
    "source": [
     "btc.distinct().count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-07-01T12:42:14.313651Z",
-     "start_time": "2018-07-01T12:42:14.310968Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#btc.select(\"text\").distinct().count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-07-01T12:42:14.338942Z",
-     "start_time": "2018-07-01T12:42:14.315213Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8404911679018158"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "17431338/20739466"
    ]
   },
   {
@@ -2827,81 +2824,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-09-10T22:51:55.701793Z",
-     "start_time": "2018-09-10T22:51:55.697487Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "762567"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "233500+529067"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-09-10T22:52:03.849926Z",
-     "start_time": "2018-09-10T22:52:03.845958Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5477656"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1871560+3606096"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-09-10T22:52:11.054632Z",
-     "start_time": "2018-09-10T22:52:11.050107Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6240223"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "762567+5477656"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
@@ -3705,13 +3627,6 @@
     "ax.get_yaxis().set_major_formatter(\n",
     "    tkr.FuncFormatter(lambda x, p: format(int(x), ',')))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3740,7 +3655,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
