renaming and included some thoughts on features

--- a/Projects/projects for submission/capstone/Modeling_and_Evaluation.ipynb
+++ b/Projects/projects for submission/capstone/Modeling_and_Evaluation.ipynb
@@ -4574,6 +4574,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\"Close_eth\",\"Close_btc\",\n",
+    "#                 \"avg_reddit_eth_subjectivity_textblob\",\n",
+    "#                  \"avg_reddit_eth_pos_vader\",\n",
+    "#                 'avg_2day_reddit_eth_compound_vader',\n",
+    "#                 \"avg_2day_reddit_eth_pos_vader\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 320,
    "metadata": {
     "ExecuteTime": {
